fix(team/sections/intro): intro section mobile version

--- a/src/pages/team/styles.scss
+++ b/src/pages/team/styles.scss
@@ -19,6 +19,9 @@
             > * {
                 flex: 1;
             }
+            @media screen and (max-width: 576px) {
+                flex-direction: column;
+            }
         }
         
         .bottom-description {
@@ -50,6 +53,30 @@
                 text-transform: lowercase;
             }
 
+            @media screen and (max-width: 576px) {
+                order: 1;
+                padding-top: 60px;
+                > * {
+                    padding-left: 15%;
+                    padding-right: 15%;
+                }
+    
+                .title {
+                    font-size: 30px;
+                }
+                .title-big {
+                    font-size: 90px;
+                    margin-bottom: 50px;
+                }
+            }
+
+        }
+
+        @media screen and (max-width: 576px) {
+            .image-section {
+                order: 2;
+                width: 100%;
+            }
         }
 
         .team-image {
@@ -64,6 +91,15 @@
             top: 26%;
             left: 10%;
             cursor: pointer;
+
+            @media screen and (max-width: 576px) {
+                position: relative;
+                height: 90%;
+                width: 70%;
+                top: 0;
+                left: 0;
+                margin: 0 auto;
+            }
         }
 
         &.fullscreen {
